# consciousness

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
src/consciousness/: __init__.py  __main__.py  cli.py  models.py
src/consciousness/api/: __init__.py  app.py
src/consciousness/extractors/: __init__.py  base.py  knowledge.py  llm.py  registry.py  sensitive.py
src/consciousness/mcp_server/: server.py
src/consciousness/memory/: knowledge_graph.py  summarizer.py  synthesizer.py
src/consciousness/parser/: __init__.py  base.py  chatgpt_export.py  claude_export.py
src/consciousness/store/: db.py  vectors.py
src/consciousness/web/: app.py
src/consciousness/web/templates/: base.html  conversation.html  conversations.html  decisions.html  error.html  projects.html  search.html
tests/: conftest.py  test_api.py  test_chatgpt_parser.py  test_database.py  test_extractor.py  test_extractor_plugins.py  test_ingest_watch.py  test_knowledge_graph.py  test_llm_extractor.py  test_maintenance.py  test_memory_synthesizer.py  test_models.py  test_multi_account.py  test_parser.py  test_parser_edge_cases.py  test_sharing.py  test_summarizer.py  test_web.py
tests/integration/: conftest.py  test_export_import.py  test_ingest_pipeline.py  test_mcp_tools.py  test_vector_store.py
