[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "consciousness"
version = "0.1.0"
description = "Portable context API — your Claude history as an account-independent MCP server"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "sentence-transformers>=2.2",
    "chromadb>=0.5",
    "click>=8.0",
    "anthropic>=0.40",
    "python-dateutil>=2.8",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
consciousness = "consciousness.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/consciousness"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
